# dozer-process-data-api

./: README.md
aws-k8s-iac/: .projenrc.ts  package.json
aws-k8s-iac/.projen/: deps.json  tasks.json
aws-k8s-iac/src/: apigw-lambda-sqs.ts  ddb.ts  irsa.ts  main.ts
aws-k8s-iac/src/cdk8s/: main.ts.bk
aws-k8s-iac/src/cdk8s/imports/: karpenter.sh.ts  keda.sh.ts
aws-k8s-iac/src/cdk8s/karpenter-provisioner/: dozer-job-provisoner.ts  provisioner-constants.ts
aws-k8s-iac/src/cdk8s/keda/: dozer-job.ts
aws-k8s-iac/src/cdk8s/serviceAccount/: processor-job-sa.ts
aws-k8s-iac/src/eks-blueprints/: builder.ts  eks-blueprint.ts
aws-k8s-iac/src/lambda-handler/: index.py
aws_iac/: .gitignore  .projenrc.ts  package.json
aws_iac/.projen/: deps.json  tasks.json
aws_iac/src/: ecr.ts  irsa.ts  main.ts
aws_iac/src/eks-blueprints/: eks-blueprint.ts  platform-user.ts
aws_iac/src/lambda-handler/: index.py
aws_iac/src/shared/: constants.ts
cdk8s/: .projenrc.ts  package.json
cdk8s/.projen/: deps.json  tasks.json
cdk8s/src/imports/: karpenter.sh.ts  keda.sh.ts
cdk8s/src/karpenter-provisioner/: dozer-job-provisoner.ts  provisioner-constants.ts
cdk8s/src/keda/: constants.ts  dozer-job.ts
cdk8s/src/serviceAccount/: processor-job-sa.ts
data_processor/: Cargo.toml  Dockerfile
data_processor/src/: main.rs
images/: cover.psd
