[package]
name = "data-processor-sample"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
aws-config = "0.48.0"
aws-sdk-sqs = "0.18.0"
aws-sdk-dynamodb = "0.18.0"
rand = "*"
env_logger = "0.9.0"
#rusoto_core = "0.48.0"
#rusoto_sqs = "0.48.0"
tokio-stream = "0.1.8"